# collision-simulation

./: CMakeLists.txt  LICENSE  README.md  benchmark.sh  bodyuserdata.h  build.sh  custom.h  draft.cpp  draft2.cpp  environment.h  frame.h  lidar.h  lineFollowing.cpp  lineFollowingSim.cpp  listener.h  main.cpp  map.h  noRobot.cpp  obstacle.h  output.txt  reactive.cpp  reactive_target.cpp  robot.h  run.sh  settings.cpp  simplifiedPathFiniding.cpp  speed_analysis.py  speed_analysis.sh  target.cpp  target_benchmark.cpp  target_benchmark_alt.cpp  target_forget.cpp  targetless.cpp  targetless_benchmark.cpp  targetless_benchmark_alt.cpp  targetless_forget.cpp  targetless_simple.cpp  test.txt  testController.cpp  testEnvironmentRepresentation.cpp  (+2 more)
benchmark/: analyse.sh  back_forth_speed.eps  data_list.txt  explore_vs_graph.eps  explore_vs_graph.py  planning_clean.txt  planning_only.py  planning_speed_1.sh  plot_speed_exp.py  readme.txt  stats060224_1841.txt  stats060224_1909.txt  stats060224_1921.txt  stats110724_1520.txt  stats210624_1955.txt  stats210624_1956.txt  stats210624_2013.txt  stats240624_1557.txt  stats240624_1610.txt  stats240624_1631.txt  stats240624_1651.txt  stats240624_1702.txt  stats240624_1706.txt  stats240624_1717.txt  stats240624_1743.txt  stats240624_1756.txt  stats250624_1052.txt  stats250624_1106.txt  stats250624_1107.txt  stats250624_1138.txt  stats250624_1206.txt  stats250624_1229.txt  stats250624_1239.txt  stats250624_1248.txt  stats250624_1304.txt  stats250624_1413.txt  stats250624_1424.txt  stats250624_1506.txt  stats250624_1528.txt  stats250624_1551.txt  (+6 more)
benchmark/Dmatch_target/: stats190924_2041.txt  stats230924_1350.txt  stats230924_1358.txt  stats230924_1400.txt  stats230924_1403.txt
benchmark/Dmatch_target_check/: data_list.txt  planning_clean.txt  stats230924_1843.txt  stats230924_1902.txt  stats240924_1430.txt  stats240924_1503.txt  stats240924_1505.txt  stats240924_1517.txt  stats240924_1526.txt  stats240924_1757.txt  stats240924_1834.txt  stats240924_1846.txt
benchmark/Dmatch_target_check_nok/: data_list.txt  planning_clean.txt  stats091024_1309.txt  stats091024_1313.txt  stats091024_1348.txt  stats151024_1856.txt  stats151024_1918.txt  stats151024_1928.txt  stats151024_1952.txt  stats151024_2003.txt  stats151024_2017.txt  stats200125_1927.txt  stats200125_1930.txt  stats200125_1937.txt  stats200125_1942.txt  stats200125_1946.txt  stats200125_1949.txt  stats200125_1951.txt  stats210125_1500.txt  stats210125_1530.txt  stats210125_1533.txt  stats210125_1541.txt  stats210125_1548.txt  stats210125_1551.txt  stats210125_1555.txt  stats210125_1559.txt  stats210125_1603.txt  stats210125_1606.txt  stats210125_1624.txt  stats210125_1630.txt  stats210125_1636.txt  stats210125_1644.txt  stats210125_1651.txt  stats210125_1712.txt  stats210125_1720.txt  stats210125_1725.txt  stats210125_1728.txt  stats210125_1736.txt  stats210125_1740.txt  stats210125_1834.txt  (+11 more)
benchmark/Dmatch_target_cross/: data_list.txt  planning_clean.txt  stats061124_1708.txt  stats061124_1721.txt  stats061124_1724.txt  stats061124_1726.txt  stats181024_1828.txt  stats181024_1829.txt  stats181024_1856.txt  stats181024_1859.txt  target_cross_2.txt.txt  target_cross_nowalls.txt
benchmark/Dmatch_target_cross_forward/: data_list.txt  planning_clean.txt  stats061124_1543.txt  stats061124_1618.txt  stats061124_1640.txt  stats210125_1906.txt  (+6 more)
include/: StepCallback.h  configurator.h  robot.h  state.h
src/: CMakeCache.txt  CMakeLists.txt  StepCallback.h  affordance.h  configurator.cpp  configurator.h  debug.cpp  debug.h  disturbance.cpp  disturbance.h  general.cpp  general.h  graphTools.cpp  graphTools.h  measurement.cpp  measurement.h  plan.h  primitive.cpp  primitive.h  printMap.cpp  robot.h  sensor.cpp  sensor.h  settings.h  state.cpp  state.h  task.cpp  task.h  worldbuilder.cpp  worldbuilder.h
test/: CMakeLists.txt  Makefile  SPF  avg_s_1m.txt  avgs_1.txt  blank.cpp  callbacks.h  cmake_install.cmake  exampleTrajectories  expected_d.cpp  generateSynthetic.cpp  iir_test_headers.h  lineFollowing.cpp  lineFollowingSim.cpp  loop_RT.cpp  loop_sim.cpp  makeTrajectories.cpp  newProcess.h  noMotors.cpp  noRobot  noRobot.cpp  noise.txt  noise_avg.txt  noise_avg_0.txt  noise_plot.py  optic_flow_test.cpp  readme.txt  simplifiedPathFiniding.cpp  still_iir.txt  straight_iir.txt  target_reactive_sim.cpp  target_sim.cpp  targetless.cpp  targetless_sim.cpp  task_avgofs.cpp  task_ofs.cpp  testBoostGraph.cpp  testController.cpp  testDirectedTree.cpp  testEnvRep  (+13 more)
test/170924_1321_badrun/: graph0001.txt  robot0001.txt  robot0154.txt  robot0157.txt  robot0173.txt
test/251023_TAGET/: robot0001.txt  robot0002.txt  robot0003.txt  robot0005.txt  robot0006.txt  robot0008.txt  robot0011.txt  robot0012.txt  robot0015.txt  robot0016.txt  robot0019.txt  robot0021.txt  robot0023.txt  robot0027.txt  robot0029.txt  robot0032.txt  robot0033.txt  robot0034.txt  robot0036.txt  robot0037.txt  robot0045.txt  robot0047.txt  robot0048.txt  robot0049.txt  robot0051.txt  robot0055.txt  robot0057.txt  robot0059.txt  robot0060.txt  robot0061.txt  robot0062.txt  robot0063.txt  robot0065.txt  robot0075.txt  robot0077.txt  robot0079.txt  robot0080.txt  robot0081.txt  robot0083.txt  robot0085.txt  (+18 more)
test/logs_errors/: errors_p0.000_i1.000_d1.000.txt  errors_p0.050_i1.000_d1.000.txt  errors_p0.080000_i1.000000_d1.000000.txt  errors_p0.080_i0.005_d1.000.txt  errors_p0.080_i0.050_d1.000.txt  errors_p0.080_i1.000_d1.000.txt  errors_p0.100_i1.000_d1.000.txt  errors_p0.200000_i1.000000_d1.000000.txt  errors_p0.205000_i1.000000_d1.000000.txt  errors_p1.000000_i1.000000_d1.000000.txt
test/src/: Makefile  cmake_install.cmake
test/unit_test/: CMakeCache.txt  CMakeLists.txt  backtrack.cpp  been_there.cpp  checkPlan.cpp  disturbance_dimensions.cpp  end_contact.cpp  explorer.cpp  feature_clusters.cpp  fill_for_dist.cpp  find_match_s.cpp  get_disturbance.cpp  kmeans_clusters.cpp  make_sensor.cpp  match.cpp  match_equal.cpp  planner.cpp  processData_k.cpp  replanner.cpp  split_step.cpp  split_task.cpp  state_difference.cpp  transitionMatrix.cpp
(+480 files in other folders)
